[package]
name = "my-no-sql-server-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
master-node = []

[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
tokio = { version = "*", features = ["full"] }
my-no-sql-core = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-no-sql-core.git" }
my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
